//
// Copyright (c) 2016-2024 Deephaven Data Labs and Patent Pending
//
package io.deephaven.javascript.proto.dhinternal.io.deephaven.proto.table_pb.aggspec.aggspecnonuniquesentinel;

import jsinterop.annotations.JsPackage;
import jsinterop.annotations.JsType;

@JsType(
        isNative = true,
        name = "dhinternal.io.deephaven.proto.table_pb.AggSpec.AggSpecNonUniqueSentinel.TypeCase",
        namespace = JsPackage.GLOBAL)
public class TypeCase {
    public static int BOOL_VALUE,
            BYTE_VALUE,
            CHAR_VALUE,
            DOUBLE_VALUE,
            FLOAT_VALUE,
            INT_VALUE,
            LONG_VALUE,
            NULL_VALUE,
            SHORT_VALUE,
            STRING_VALUE,
            TYPE_NOT_SET;
}
