package io.deephaven.javascript.proto.dhinternal.io.deephaven.proto.table_pb.literal;

import jsinterop.annotations.JsPackage;
import jsinterop.annotations.JsType;

@JsType(
    isNative = true,
    name = "dhinternal.io.deephaven.proto.table_pb.Literal.ValueCase",
    namespace = JsPackage.GLOBAL)
public class ValueCase {
  public static int BOOLVALUE,
  DOUBLEVALUE,
  LONGVALUE,
  NANOTIMEVALUE,
  STRINGVALUE,
  VALUE_NOT_SET;
}
